znk-exercise fix overflow

--- a/src/components/znkExercise/toolbox/scss/_draw-tool.scss
+++ b/src/components/znkExercise/toolbox/scss/_draw-tool.scss
@@ -5,14 +5,10 @@ znk-exercise{
 
         &.no-pointer-events{
             pointer-events: none;
-            overflow-y: auto;
-            overflow-x: hidden;
         }
 
         &.crosshair-cursor{
             cursor: crosshair;
-            overflow-y: auto;
-            overflow-x: hidden;
         }
     }
 }
